Fix .gitignore and database library so it's added to version control history

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 node_modules/
 client/lib/*
-!client/lib/datatable/datatable.css
-!client/lib/datatable/datatable.js
+!client/lib/datatable.css
+!client/lib/datatable.js
 client/app/bundle.js
 client/app/.bundle.js
 npm-debug.log
